remove scalapy